# sqlmath

./: .ci.sh  .eslintrc.js  .fndraw.js  .gitconfig  .gitignore  .npmignore  .tradebot_public.sqlite  .tradebot_public_2023_09_19.sqlite  .tradebot_public_2023_10_03_spx.sqlite  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  Manifest.in  PKG-INFO  README.md  _binary_sqlmath_napi8_darwin_x64.node  _binary_sqlmath_napi8_linux_x64.node  _binary_sqlmath_napi8_win32_x64.node  _binary_sqlmath_shell_darwin_x64  _binary_sqlmath_shell_linux_x64  _sqlmath.cp310-win_amd64.exp  _sqlmath.cp310-win_amd64.pyd  _sqlmath.cp311-win_amd64.pyd  _sqlmath.cp312-win_amd64.pyd  _sqlmath.cp313-win_amd64.pyd  _sqlmath.cp314-win_amd64.pyd  _sqlmath.napi6_darwin_arm64.node  _sqlmath.napi6_darwin_x64.node  _sqlmath.napi6_linux_x64.node  _sqlmath.napi6_win32_x64.node  _sqlmath.shell_darwin_arm64  _sqlmath.shell_darwin_x64  _sqlmath.shell_linux_x64  a00.js  apidoc.html  asset_image_logo_256.html  asset_image_logo_512.html  asset_sqlmath_datatables_rollup.js  asset_sqlmath_external_rollup.css  (+56 more)
.artifact/: apidoc.html
branch-alpha/: .ci.sh  .gitignore  CHANGELOG.md  MANIFEST.in  PKG-INFO  README.md  _binary_sqlmath_napi8_darwin_x64.node  _binary_sqlmath_napi8_linux_x64.node  _binary_sqlmath_napi8_win32_x64.node  _binary_sqlmath_shell_darwin_x64  _binary_sqlmath_shell_linux_x64  _sqlmath.cp310-win_amd64.pyd  _sqlmath.cp311-win_amd64.pyd  _sqlmath.cp312-win_amd64.pyd  _sqlmath.cp313-win_amd64.pyd  _sqlmath.cp314-win_amd64.pyd  _sqlmath.napi6_darwin_arm64  _sqlmath.napi6_darwin_arm64.node  _sqlmath.napi6_darwin_x64.node  _sqlmath.napi6_linux_x64  _sqlmath.napi6_linux_x64.node  _sqlmath.napi6_win32_x64.node  _sqlmath.shell_darwin_arm64  _sqlmath.shell_darwin_x64  _sqlmath.shell_linux_x64  _sqlmath.shell_win32_x64.lib  _sqlmath_shell.cpython-310-darwin  asset_image_logo_512.html  asset_sqlmath_external_rollup.css  asset_sqlmath_external_rollup.js  cpplint.py  index.html  jslint.mjs  jslint_ci.sh  libomp.dylib  libomp_darwin_arm64.dylib  package.json  pyproject.toml  setup.py  spa.sqlchart.js  (+391 more)
branch-alpha/.artifact/: apidoc.html
branch-alpha/.artifact/coverage/: coverage-1963-1656782416121-0.json  coverage-1967-1656665385661-0.json  coverage-1968-1663713881059-0.json  coverage-1969-1655003503799-0.json  coverage-1973-1654584490102-0.json  coverage-1975-1654552379192-0.json  coverage-1976-1654468608363-0.json  coverage-1980-1654478153370-0.json  coverage-1980-1655490350333-0.json  coverage-1981-1657891147594-0.json  coverage-1982-1654493918298-0.json  coverage-1989-1654480106214-0.json  coverage-1989-1654490824230-0.json  coverage-1989-1656782715965-0.json  coverage-1995-1654490071750-0.json  coverage-2002-1654480285190-0.json  coverage-2002-1654502865236-0.json  coverage-2003-1655745294699-0.json  coverage-2006-1654479396496-0.json  coverage-2012-1658010361647-0.json  coverage-2021-1655580648217-0.json  coverage-2022-1654469122787-0.json  coverage-2028-1662240522373-0.json  coverage-2046-1683521029226-0.json  coverage-2056-1656773708890-0.json  coverage-2056-1669008794680-0.json  coverage-2066-1675047898888-0.json  coverage-2067-1669006111455-0.json  coverage-2071-1654496752908-0.json  coverage-2071-1654554527514-0.json  coverage-2071-1656666276622-0.json  coverage-2072-1676087851873-0.json  coverage-2073-1669009074857-0.json  coverage-2083-1654502092255-0.json  coverage-2084-1669006942554-0.json  coverage-2087-1667325256537-0.json  coverage-2089-1676089743797-0.json  coverage-2093-1669006603782-0.json  coverage-2103-1682189796536-0.json  coverage-2108-1654479613114-0.json  (+102 more)
branch-alpha/.github/workflows/: ci.yml  publish.yml  publish_pypi_test.yml
branch-alpha/sqlmath/: __init__.py
branch-beta/: .ci.sh  .gitignore  .npmignore  CHANGELOG.md  MANIFEST.in  PKG-INFO  README.md  _binary_sqlmath_napi8_darwin_x64.node  _binary_sqlmath_napi8_linux_x64.node  _binary_sqlmath_napi8_win32_x64.node  _binary_sqlmath_shell_darwin_x64  _binary_sqlmath_shell_linux_x64  _sqlmath.cp310-win_amd64.pyd  _sqlmath.cp311-win_amd64.pyd  _sqlmath.cp312-win_amd64.pyd  _sqlmath.cp313-win_amd64.pyd  _sqlmath.cp314-win_amd64.pyd  _sqlmath.napi6_darwin_arm64.node  _sqlmath.napi6_darwin_x64.node  _sqlmath.napi6_linux_x64.node  _sqlmath.napi6_win32_x64.node  _sqlmath.shell_darwin_arm64  _sqlmath.shell_darwin_x64  _sqlmath.shell_linux_x64  _sqlmath.shell_win32_x64.exp  _sqlmath.shell_win32_x64.lib  _sqlmath_shell.cpython-310-darwin  asset_sqlmath_external_rollup.js  index.html  jslint.mjs  jslint_ci.sh  libomp.dylib  libomp_darwin_arm64.dylib  libomp_darwin_x64.dylib  package.json  pyproject.toml  setup.py  sqlmath-2023.10.25-cp310-cp310-macosx_10_9_x86_64.whl  sqlmath-2023.10.25-cp310-cp310-win_amd64.whl  sqlmath-2023.10.25-cp311-cp311-macosx_10_9_x86_64.whl  (+378 more)
branch-master/: .ci.sh  .npmignore  CHANGELOG.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  _binary_sqlmath_napi8_darwin_x64.node  _binary_sqlmath_napi8_linux_x64.node  _binary_sqlmath_napi8_win32_x64.node  _binary_sqlmath_shell_darwin_x64  _binary_sqlmath_shell_linux_x64  _sqlmath.cp310-win_amd64.pyd  _sqlmath.cp311-win_amd64.pyd  _sqlmath.cp312-win_amd64.pyd  _sqlmath.cp313-win_amd64.pyd  _sqlmath.cp314-win_amd64.pyd  _sqlmath.napi6_darwin_arm64.node  _sqlmath.napi6_darwin_x64.node  _sqlmath.napi6_linux_x64.node  _sqlmath.napi6_win32_x64.node  _sqlmath.shell_darwin_arm64  _sqlmath.shell_darwin_x64  _sqlmath.shell_linux_x64  _sqlmath.shell_win32_x64.exp  _sqlmath_shell.cpython-310-darwin  asset_sqlmath_external_rollup.js  csslint.js  index.html  jslint_ci.sh  libomp.dylib  libomp_darwin_arm64.dylib  libomp_darwin_x64.dylib  package.json  pyproject.toml  setup.py  sqlite3_ext.c  sqlmath-2023.10.25-cp310-cp310-macosx_10_9_x86_64.whl  sqlmath-2023.10.25-cp310-cp310-win_amd64.whl  sqlmath-2023.10.25-cp311-cp311-macosx_10_9_x86_64.whl  (+264 more)
branch-o2/: .ci.sh  _binary_sqlmath_napi8_linux_x64.node  _binary_sqlmath_napi8_win32_x64.node  jslint_ci.sh  package.json  spa.sqlchart.html  sqlmath_wasm.js  sqlmath_wasm.wasm  sqlmath_wrapper_wasm.js
branch-o3/: .ci.sh  .npmignore  sqlmath.mjs  (+1 more)
(+226 files in other folders)
