# https://setuptools.pypa.io/en/latest/userguide/ext_modules.html
[build-system]
requires = [
    "pycodestyle == 2.11.0",
    "ruff >= 0.0.288",
    "setuptools >= 65.5.0",
]
build-backend = "setuptools.build_meta"

# https://peps.python.org/pep-0621/#example
[project]
authors = [{name = "Kai Zhu"}]
dependencies = []
description = "sqlite for datascience"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = []
name = "sqlmath"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: C',
    'Programming Language :: JavaScript',
    'Programming Language :: Python',
    'Topic :: Database',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development',
]

[project.scripts]
# spam-cli = "spam:main_cli"

[project.urls]
documentation = "https://github.com/sqlmath/sqlmath"
homepage = "https://github.com/sqlmath/sqlmath"
repository = "https://github.com/sqlmath/sqlmath"
changelog = "https://github.com/sqlmath/sqlmath/blob/master/CHANGELOG.md"

# to disable scanning PEP 420 namespaces (true by default)
# namespaces = false

# https://cibuildwheel.readthedocs.io/en/stable/options/
[tool.cibuildwheel]
archs = ["native"]
build = ["cp310-*"]
build-verbosity = "3"
skip = ["pp*", "*-musllinux*"]
# test-command = ["cd {project} && python setup.py test"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"

[tool.setuptools]
py-modules = ["sqlmath"]

[tool.setuptools.dynamic]
version = {attr = "sqlmath.__version__"}
